# matrici

./: CMakeLists.txt  Column.h  Matrix.h  Row.h  main.cpp
test/: CMakeLists.txt  ColumnTest.cpp  MatrixTest.cpp  RowTest.cpp  runAllTests.cpp
