add_subdirectory(lib/googletest)
#find_package(GTest REQUIRED)
#include_directories(${GTEST_INCLUDE_DIRS})
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

set(SOURCE_FILES runAllTests.cpp MatrixTest.cpp RowTest.cpp ColumnTest.cpp)
add_executable(runAllTests ${SOURCE_FILES})
#target_link_libraries(runAllTests ${GTEST_BOTH_LIBRARIES} mytest)
target_link_libraries(runAllTests gtest gtest_main mytest)